force-app/main/default/objects/Birthday_Wishes__c/Birthday_Wishes__c.object-meta.xml
<CustomObject>
    <label>Birthday Wishes</label>
    <nameField>
        <displayFormat>BW-{00000}</displayFormat>
        <label>Birthday Wishes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Birthday Wishes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>