force-app/main/default/objects/Birthday_Wishes__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>Birthday Wishes</relationshipLabel>
    <relationshipName>Birthday_Wishes</relationshipName>
    <type>Lookup</type>
</CustomField>