force-app/main/default/objects/Birthday_Wishes__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Birthday Wishes</relationshipLabel>
    <relationshipName>Birthday_Wishes</relationshipName>
    <type>Lookup</type>
</CustomField>